--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=7.1",
         "clue/socket-raw": "^1.2",
-        "psr/log": "^1.0",
+        "psr/log": "^1.0 || ^3.0",
         "symfony/process": "^3.3|^4.0|^5.0"
     },
     "require-dev": {
